src/App.css
@import url('https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,300;0,400;0,500;1,200;1,300;1,400&display=swap');

@import "react-slideshow-image/dist/styles.css";

*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

html{
    scroll-behavior: smooth;
}

body{
    font-family: "Poppins";
}

.navbar{
    display: flex;
    /* border: 1px solid red; */
    width: 96%;
    margin: 0em auto 0 auto;
    justify-content: space-between;
    align-items: center;
    height: 15dvh;
    z-index: 1;
}

.nav ul{
    list-style: none;
    display: flex;
}

.nav ul li{
    margin: 0 1em;
}

.nav ul a{
    color: black;
    text-decoration: none;
}

.nav ul a:hover{
    text-decoration: underline;
    text-underline-offset: .4em;
}

.icons svg{
    margin: 0 .6em;
    cursor: pointer;
}
.icons svg:hover{
    animation: squish 300ms ease-in-out;
}

.home{
    
    height: 85dvh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-image: url(./assets/images/background2.jpg);
    background-position: center;
    background-size: cover;
}

.home .welcome{
    text-transform: uppercase;
    text-align: center;

}

.welcome h1{
    font-size: 6rem;
    color: white;
    font-family: "Lobster", "Poppins";
}

.welcome p{
    color: white;
    font-weight: 700;
}

.menu-con{
    padding-top: 5em;

}
.menu{
    display: flex;
    justify-content: space-between;
    width: 95%;
    margin: 0 auto;
    flex-wrap: wrap;
}

.indiItem {
    flex-grow: 1;
    margin-bottom: 1em;
    max-width: 300px;
    overflow: hidden;

}
.indiItem .img{
    width: 300px;
    height: 300px;
    border-radius: 10px;
    overflow: hidden;

    width: 100%;
}

.indiItem img{
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.order{
    display: block;
        outline: 0;
        appearance: none;
        padding: 0px 12px;
        border: 0px solid transparent;
        border-radius: 4px;
        text-decoration: none;
        cursor: pointer;
        background-color: rgb(9, 128, 76);
        box-shadow: rgb(19 170 82 / 40%) 0px 2px 3px;
        color: rgb(255, 255, 255);
        font-size: 14px;
        font-weight: 400;
        height: 36px;
        transition: all 150ms ease-in-out 0s;
    
    margin: 1em auto 0 auto;
}

.order:hover {
    color: rgb(255, 255, 255);
    background-color: rgb(17, 97, 73);
    box-shadow: rgb(19 170 82 / 40%) 0px 2px 3px, rgb(195 231 202) 0px 0px 0px 3px;
}

.img-slider-img{
    height: 100%;
    width: 100%;
    display: block;
    flex-shrink: 0;
    flex-grow: 0;
    transition: translate 300ms ease-in-out;
}
.img-slider-img img{
    object-fit: cover;
    height: 100%;
    width: 100%;
    display: block;
    flex-shrink: 0;
    flex-grow: 0;
    transition: translate 300ms ease-in-out;
}

.img-slider-btn{
    all: unset;
    display: block;
    position: absolute;
    top: 0;
    bottom: 0;
    padding: 1rem;
    cursor: pointer;
    transition: background-color 100ms ease-in-out;
}

.img-slider-btn:hover{
    background-color: rgb(0,0,0, 0.2);
}

.img-slider-btn:hover > * {
    animation: squish 200ms ease-in-out;
}
.img-slider-btn > *{
    stroke: white;
    fill: black;
    height: 3rem;
    width: 3rem;
}

@keyframes squish {
    50%{
        scale: 1.4 .6;
    }
}

.switch{
    display: flex;
    gap: .25rem;
}

.dot-icon{
    all: unset;
    display: block;
    cursor: pointer;
    width: 1rem;
    height: 1rem;
    transition: scale 100ms ease-in-out;
}


.dot-icon:hover{
    scale: 1.2;
}
.dot-icon > *{
    stroke: white;
    fill: black;
    height: 100%;
    width: 100%;
}

.check{
    text-align: center;
    text-transform: capitalize;
    margin-top: 1rem;
}

.reserve-con {
    aspect-ratio: 10/4.5;
}

h4{
    font-size: 3rem;
}

.ham-menu{
    display: none;
}


@media screen and (max-width: 675px) {

    header{
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

    .logo{
        margin-left: 1em;
    }
.ham-menu {
        display: block;
        margin-right: 1em;
    }

    .big, .big-icons{
        display: none;
    }

    .ham ul{
        flex-direction: column;
    }

    #ham-con{
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100dvh;
        background-color: #57648C;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        z-index: 1;
        transition: transform 500ms ease-in-out;
    }

    .ham-nav{
        display: flex;
        flex-direction: column;
    }
    .ham li{
        text-align: center;
    }

    .ham-icon{
        position: absolute;
        left: 50%;
        translate: -50%;
        bottom: .5rem;
    }

    .cancel{
        position: absolute;
        top: 4%;
        right: 4%;
    }



    .reserve-con{
        aspect-ratio: 1/1;

    }

    .welcome h1{
        font-size: 1.8rem;
        margin: 1em;
    }

    .check{
        font-size: 1.5rem;
    }

    h4{
        font-size: 1.5rem;
    }

    .menu{
        width: 97%;
    }
    .indiItem{
        width: 96%;
        margin: 0 auto 1em auto;
        max-width: 500px;
    }
        .indiItem .img {
            border-radius: 10px;
            overflow: hidden;

        }


}

